src/test/ui/proc-macro/expand-to-unstable-2.stderr
error[E0658]: attributes starting with `rustc` are reserved for use by the `rustc` compiler
  --> $DIR/expand-to-unstable-2.rs:8:10
   |
LL | #[derive(Unstable)]
   |          ^^^^^^^^
   |
   = note: see issue #29642 <https://github.com/rust-lang/rust/issues/29642> for more information
   = help: add `#![feature(rustc_attrs)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
